added call for project detail
